k8s_manifests/backend-ch-de-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ch-de
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-ch-de
  template:
    metadata:
      labels:
        app: backend-ch-de
    spec:
      containers:
        - name: backend-ch-de
          image: my_backend_image:latest
          imagePullPolicy: Never 
          ports:
            - containerPort: 8084
