k8s_manifests/backend-ch-it-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ch-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-ch-it
  template:
    metadata:
      labels:
        app: backend-ch-it
    spec:
      containers:
        - name: backend-ch-it
          image: my_backend_image:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
