k8s_manifests/backend-fr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-fr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-fr
  template:
    metadata:
      labels:
        app: backend-fr
    spec:
      containers:
        - name: backend-fr
          image: my_backend_image:latest
          imagePullPolicy: Never #cette ligne empêche Kind de télécharger l'image depuis internet, il prends uniquement la locale
          ports:
            - containerPort: 8084
