k8s_manifests/backend-us-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-us
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-us
  template:
    metadata:
      labels:
        app: backend-us
    spec:
      containers:
        - name: backend-us
          image: my_backend_image:latest
          imagePullPolicy: Never #cette ligne empêche Kind de télécharger l'image depuis internet, il prends uniquement la locale
          ports:
            - containerPort: 8084
