k8s_manifests/db-ch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-ch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-ch
  template:
    metadata:
      labels:
        app: db-ch
    spec:
      containers:
        - name: db-ch
          image: mspr-postgres-ch:latest
          imagePullPolicy: IfNotPresent #cette ligne empêche Kind de télécharger l'image depuis internet, il prends uniquement la locale
          ports:
            - containerPort: 5432
