k8s_manifests/db-fr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-fr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-fr
  template:
    metadata:
      labels:
        app: db-fr
    spec:
      containers:
        - name: db-fr
          image: mspr-postgres-fr:latest
          imagePullPolicy: IfNotPresent #cette ligne empêche Kind de télécharger l'image depuis internet, il prends uniquement la locale
          ports:
            - containerPort: 5432
