k8s_manifests/db-us-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-us
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-us
  template:
    metadata:
      labels:
        app: db-us
    spec:
      containers:
        - name: db-us
          image: postgres:latest
          imagePullPolicy: IfNotPresent #cette ligne empêche Kind de télécharger l'image depuis internet, il prends uniquement la locale
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-sql
          configMap:
            name: init-us-sql   # <--- adapte ici pour chaque base
