k8s_manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: my_frontend_image:latest
          imagePullPolicy: Never #cette ligne empêche Kind de télécharger l'image depuis internet, il prends uniquement la locale
          ports:
            - containerPort: 80
