k8s_manifests/reverse-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - name: reverse-proxy
          image: nginx:alpine
          imagePullPolicy: IfNotPresent # pour utiliser l'image officielle
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf 
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
