k8s_manifests/backend-ch-de-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ch-de-service
spec:
  selector:
    app: backend-ch-de
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: NodePort
