k8s_manifests/backend-ch-en-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ch-en-service
spec:
  selector:
    app: backend-ch-en
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: NodePort
