k8s_manifests/backend-us-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-us-service
spec:
  selector:
    app: backend-us
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: NodePort
