k8s_manifests/db-ch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-ch
spec:
  selector:
    app: db-ch
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
