k8s_manifests/db-fr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-fr
spec:
  selector:
    app: db-fr
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None  # Pour un accès stable (headless service)
