k8s_manifests/db-us-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-us
spec:
  selector:
    app: db-us
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
