k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/fr(/|$)(.*)
            backend:
              service:
                name: backend-fr-service
                port:
                  number: 8084
          - pathType: Prefix
            path: /api/us(/|$)(.*)
            backend:
              service:
                name: backend-us-service
                port:
                  number: 8084
          - pathType: Prefix
            path: /api/ch/fr(/|$)(.*)
            backend:
              service:
                name: backend-ch-fr-service
                port:
                  number: 8084
          - pathType: Prefix
            path: /api/ch/en(/|$)(.*)
            backend:
              service:
                name: backend-ch-en-service
                port:
                  number: 8084
          - pathType: Prefix
            path: /api/ch/de(/|$)(.*)
            backend:
              service:
                name: backend-ch-de-service
                port:
                  number: 8084
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
